refactor: split extension modules to freeway-ext